# proyecto_topicos_levy

./: .gitignore  README.md  docker-compose.yaml
backend/: .env.example  go.mod  go.sum  main.go  requirements.txt
client/: main.js  package.json  pyproject.toml
client/electron/: package-lock.json
client/electron-app/: electron.vite.config.ts  package-lock.json  package.json  tsconfig.web.json
client/electron-app/src/renderer/: index.html
client/electron-app/src/renderer/src/: App.tsx  routes.tsx
client/electron-app/src/renderer/src/adapters/: employee.adapter.ts
client/electron-app/src/renderer/src/assets/: main.css
client/electron-app/src/renderer/src/components/shared/: HeaderPager.jsx
client/electron-app/src/renderer/src/hooks/: useEmployees.js
client/electron-app/src/renderer/src/layouts/: Header.jsx  MainLayout.jsx  NavBar.jsx  NavButton.jsx
client/electron-app/src/renderer/src/pages/: HomePage.jsx
client/electron-app/src/renderer/src/pages/borrar/: BorrarPage.jsx
client/electron-app/src/renderer/src/pages/crear/: CrearPage.jsx  Form.jsx  HeaderPager.jsx
client/electron-app/src/renderer/src/pages/empleados/: EmpleadosPage.jsx  EmpleadosTable.jsx
client/electron-app/src/renderer/src/pages/historial/: HistorialPage.jsx
client/electron-app/src/renderer/src/pages/transferir/: TransferirPage.jsx
client/electron-app/src/renderer/src/schemas/: employee.schema.ts
client/electron-app/src/renderer/src/services/: employee.service.ts
client/electron/src/: index.html
client/flet/: main.py
client/src/: renderer.js
database/: init.sh  (+1 more)
(+15 files in other folders)
