[project]
name = "client"
version = "0.1.0"
description = ""
authors = [
    {name = "Remlok197",email = "emiliod0204@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "flet (>=0.85.2,<0.86.0)",
    "requests (>=2.34.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
